--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "前端直传阿里云oss",
   "main": "index.js",
+  "bin": {
+    "static-publish": "./bin/publish.js"
+  },
   "scripts": {
+    "release": "node release.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,6 +33,7 @@
     "@types/debug": "^4.1.7",
     "@types/mime": "^3.0.1",
     "@types/node": "^18.15.11",
+    "commander": "^10.0.0",
     "debug": "^4.3.4"
   }
 }
