--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@types/mime": "^3.0.1",
     "@types/node": "^18.15.11",
     "commander": "^10.0.0",
-    "debug": "^4.3.4"
+    "date-fns": "^2.29.3",
+    "debug": "^4.3.4",
+    "semver": "^7.4.0"
   }
 }
