--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "scripts": {
     "release": "node release.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "esFix": "eslint ./ --fix",
+    "preFix": "prettier --write ./",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -39,6 +42,27 @@
     "commander": "^10.0.0",
     "date-fns": "^2.29.3",
     "debug": "^4.3.4",
-    "semver": "^7.4.0"
+    "semver": "^7.4.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "prettier": "^2.6.0",
+    "husky": "^7.0.4",
+    "typescript": "^4.6.2",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
+    "cz-customizable": "^6.3.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-customizable"
+    },
+    "cz-customizable": {
+      "config": ".cz-configrc.js"
+    }
   }
 }
